# margincalc

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  configure.in
doc/: Makefile.am  margincalc.1
src/: Makefile.am  margincalc.c  margincalc.h  mc_common.h  mc_reqs_calcs.c  mc_reqs_calcs.h
